make plugin setting optional

--- a/src/templates/settings.twig
+++ b/src/templates/settings.twig
@@ -5,7 +5,7 @@
     instructions: 'Enter your AWS Serverless Image Handler CloudFront Distribution URL here.',
     name: 'serverlessDistributionURL', 
     id: 'serverlessDistributionURL', 
-    required: true,
+    required: false,
     value: settings.serverlessDistributionURL,
     suggestEnvVars: true,
     suggestAliases: true,
